src/main/metadata/objects/IdeasVoting__c.object
<CustomObject>
    <fields>
        <fullName>IdeaLikeCount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To make this field TRUE when the user likes an Idea</description>
        <label>IdeaLikeCount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ideas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its lookup to an idea</description>
        <label>Ideas</label>
        <referenceTo>Ideas__c</referenceTo>
        <relationshipLabel>IdeasVoting</relationshipLabel>
        <relationshipName>IdeasVoting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likeuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Its lookup to an user</description>
        <label>Likeuser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IdeasVoting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IdeasVoting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Ideas__c</columns>
        <columns>NAME</columns>
        <columns>IdeaLikeCount__c</columns>
        <columns>Rating__c</columns>
        <columns>Likeuser__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IV-{0000}</displayFormat>
        <label>IdeaVoting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IdeasVoting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>